# Hazel

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Hazel.sln  README.md  appveyor.yml  premake5.lua
.github/workflows/: push.yml
CMake/: Utils.cmake
Hazel/: Application.h  CMakeLists.txt  Hazel.vcxproj  Log.h
Hazel/src/: Hazel.h  Hazel.hpp  Test.cpp  hzpch.cpp  hzpch.h  hzpch.hpp
Hazel/src/Hazel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseBtnCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Hazel/src/Hazel/Core/: Application.cpp  Application.h  Application.hpp  Core.h  Core.hpp  EntryPoint.h  EntryPoint.hpp  Input.h  Input.hpp  KeyCodes.h  Layer.cpp  Layer.h  Layer.hpp  LayerStack.cpp  LayerStack.h  LayerStack.hpp  Log.cpp  Log.h  Log.hpp  Timestep.h  Timestep.hpp  UUID.cpp  UUID.hpp  Window.h  Window.hpp
Hazel/src/Hazel/Debug/: Instrumentor.h  Instrumentor.hpp
Hazel/src/Hazel/Events/: ApplicationEvent.h  ApplicationEvent.hpp  Event.h  Event.hpp  KeyEvent.h  KeyEvent.hpp  MouseEvent.h  MouseEvent.hpp
Hazel/src/Hazel/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLayer.hpp
Hazel/src/Hazel/Math/: Math.cpp  Math.hpp
Hazel/src/Hazel/Renderer/: Buffer.cpp  Buffer.h  Buffer.hpp  Camera.hpp  EditorCamera.cpp  EditorCamera.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsContext.cpp  GraphicsContext.h  GraphicsContext.hpp  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCamera.hpp  OrthographicCameraController.cpp  OrthographicCameraController.h  OrthographicCameraController.hpp  RenderCommand.cpp  RenderCommand.h  RenderCommand.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Renderer2D.cpp  Renderer2D.h  Renderer2D.hpp  RendererAPI.cpp  RendererAPI.h  RendererAPI.hpp  Shader.cpp  Shader.h  Shader.hpp  SubTexture2D.cpp  SubTexture2D.h  SubTexture2D.hpp  Texture.cpp  Texture.h  Texture.hpp  VertexArray.cpp  VertexArray.h  (+1 more)
Hazel/src/Hazel/Scene/: Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneSerializer.cpp  SceneSerializer.hpp  ScriptableEntity.hpp
Hazel/src/Hazel/Utils/: Utils.hpp
Hazel/src/Platform/: WindowsWindow.cpp  WindowsWindow.h
Hazel/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.h  OpenGLContext.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.h  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexArray.hpp
Hazel/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsInput.hpp  WindowsWindow.cpp  WindowsWindow.h  WindowsWindow.hpp
Hazel/src/Utils/: Utils.cpp  Utils.hpp
HazelEditor/: CMakeLists.txt
HazelEditor/assets/shaders/: FlatCol.glsl  Texture.glsl
HazelEditor/src/: EditorLayer.hpp  HazelEditorApp.cpp
Hazelnut/: CMakeLists.txt
Hazelnut/assets/scenes/: 3DExample.hazel  Cube.hazel  Example.hazel  Physics.hazel
Hazelnut/assets/shaders/: Texture.glsl
Hazelnut/src/: EditorLayer.cpp  EditorLayer.hpp  HazelnutApp.cpp
Hazelnut/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/assets/shaders/: Basic.glsl  FlatCol.glsl  Texture.glsl
Sandbox/src/: Application.cpp  ParticleSystem.cpp  ParticleSystem.h  ParticleSystem.hpp  Sandbox2D.cpp  Sandbox2D.h  Sandbox2D.hpp  SandboxApp.cpp
assets/shaders/: Texture.glsl  basic.vert
res/shaders/: blue.frag  flatCol.frag
